Fixed issue with CSS on mobile devices

--- a/src/Components/Combo.css
+++ b/src/Components/Combo.css
@@ -40,6 +40,9 @@
     padding-top: 0px;
     text-align: center;
     margin-top: 0px;
+    @media (width < 450px) {
+        margin-top: 300px;
+    }
 }
 
 
